--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -24,10 +24,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    kotlin.experimental {
-        coroutines 'enable'
-    }
 }
 
 ext {
@@ -36,7 +32,9 @@ ext {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxVersion"//Kotlin coroutines
+
+    //Kotlin coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinxVersion"
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
